--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="yellow">#ffc107</color>
     <color name="background">#1a1a1a</color>
     <color name="gray">#2a2a2a</color>
+    <color name="hint">#b0b0b0</color>
 
 </resources>
