--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,6 +79,9 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:alpha">0.5</item>
         <item name="android:visibility">gone</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:elevation">100dp</item>
     </style>
 
 </resources>
