--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,9 @@
         <item name="android:textSize">25sp</item>
         <item name="android:textAppearance">@style/custom_font</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/hint</item>
         <item name="android:gravity">center</item>
+        <item name="android:enabled">false</item>
     </style>
 
     <style name="BackImageView">
@@ -81,7 +83,6 @@
         <item name="android:visibility">gone</item>
         <item name="android:focusable">true</item>
         <item name="android:clickable">true</item>
-        <item name="android:elevation">100dp</item>
     </style>
 
 </resources>
